<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="java.lang.String"/>

        <import type="android.view.View"/>

        <variable
            name="model"
            type="com.gmail.ioanna.taskmanagerapplication.EditViewModel"/>

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/task_color"
            android:text="@string/name"
            android:textSize="12sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/editText"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="1.0"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:theme="@style/MyEditText"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/editText"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintVertical_bias="1.0"
            android:text="@={model.name}"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/task_color"
            android:text="@string/percentOfCompletion"
            android:textSize="12sp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/textView2"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/spinner2" />

        <EditText
            app:theme="@style/MyEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/spinner2"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="0-100"
            android:textColorHint="@color/hint"
            android:inputType="number"
            android:text="@={model.percentOfCompletion}"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/task_color"
            android:text="@string/state"
            android:textSize="12sp"
            android:id="@+id/textView3"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/spinner3"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <EditText
            app:theme="@style/MyEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:id="@+id/spinner3"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="New/In Progress/Done"
            android:textColorHint="@color/hint"
            android:text="@={model.state}"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/task_color"
            android:text="@string/estimetedTime"
            android:textSize="12sp"
            android:id="@+id/textView4"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/editText2"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:theme="@style/MyEditText"
            android:id="@+id/editText2"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:inputType="number"
            android:text="@={model.estimatedTime}"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/task_color"
            android:text="@string/startDate"
            android:textSize="12sp"
            android:id="@+id/textView5"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/editText3"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="dd.mm.yyyy"
            android:textColorHint="@color/hint"
            android:id="@+id/editText3"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView7"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:inputType="date"
            android:text="@={model.startDate}"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/task_color"
            android:text="@string/dueDate"
            android:textSize="12sp"
            android:id="@+id/textView7"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/editText4"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="dd.mm.yyyy"
            android:textColorHint="@color/hint"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:id="@+id/editText4"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/button"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:inputType="date"
            android:text="@={model.dueDate}"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:background="@color/white"
            android:text="@string/Save"
            android:textColor="@color/task_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            android:onClick="@{() -> model.onButtonClick()}"/>

    </android.support.constraint.ConstraintLayout>

</layout>